cmake_minimum_required (VERSION 3.8)

project (Ladybug3D)

# option
set(DEFAULT_COMPILE_OPTIONS)
set(DEFAULT_LINKER_OPTIONS)

set(DEFAULT_PROJECT_OPTIONS
    CXX_STANDARD              17 
    LINKER_LANGUAGE           "CXX"
    POSITION_INDEPENDENT_CODE ON)


# Set Directory
set(DEFAULT_CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
set(PRECOMPILED_LIBRARY_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Ladybug3D/PreCompiledLib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
set(BASE_DRIECTORY ${CMAKE_CURRENT_SOURCE_DIR})
set(RESOURCE_DRIECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Ladybug3D/Resources)
set(SCRIPT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Ladybug3D/Script)
set(LIBRARY_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Ladybug3D/Libraries)
set(THIRD_PARTY_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Ladybug3D/ThirdParty)

# Copy DLL
configure_file(
    ${PRECOMPILED_LIBRARY_DIRECTORY}/x64/Debug/assimp-vc140-mt.dll 
    ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Debug/assimp-vc140-mt.dll 
COPYONLY)
configure_file(
    ${PRECOMPILED_LIBRARY_DIRECTORY}/x64/Release/assimp-vc140-mt.dll 
    ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Release/assimp-vc140-mt.dll 
COPYONLY)

# Include SubDirectory
add_subdirectory(${THIRD_PARTY_DIRECTORY}/imgui)
add_subdirectory(${THIRD_PARTY_DIRECTORY}/Direct12XTK)
add_subdirectory(${LIBRARY_DIRECTORY}/D3D12)
add_subdirectory(${LIBRARY_DIRECTORY}/Renderer)
add_subdirectory(Ladybug3D)
